service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil42
spec:
  selector:
    app: wil42
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
